--- a/modules/basis/foo.lisp.template
+++ b/modules/basis/foo.lisp.template
@@ -1,13 +1,6 @@
 (in-package :story)
 
-(define-module FOO
-  (:templates)
-  (:has-js)
-  (:dispatches)
-  (:headers)
-  (:commands)
-  (:pages)
-  (:demo-page))
+(define-story-module FOO
+  (:init))
 
-;; (define-javascript-file FOO)
 
