--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,24 @@
 {
-  "name": "hackathon",
-  "homepage": "https://github.com/Blue-Sky-Skunkworks/hackathon.git",
-  "description": "Story static website generator.",
-  "main": "",
-  "moduleType": [],
-  "authors": [
-    "William Halliburton"
-  ],
-  "license": "MIT",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "packery": null,
-    "vis": null
-  }
+    "name": "hackathon",
+    "homepage": "https://github.com/Blue-Sky-Skunkworks/hackathon.git",
+    "description": "Story static website generator.",
+    "main": "",
+    "moduleType": [],
+    "authors": [
+        "William Halliburton"
+    ],
+    "license": "MIT",
+    "private": true,
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "packery": null,
+        "vis": null,
+        "page": nill
+    }
 }
