--- a/modules/basis/story-module-foo.asd.template
+++ b/modules/basis/story-module-foo.asd.template
@@ -10,4 +10,5 @@
   :serial t
   :depends-on ("story-modules"DEPENDENCIES)
   :components ((:static-file "story-module-FOO.asd")
+               (:file "demo-FOO")))
                (:file "FOO")))
