--- a/modules/basis/story-module-foo.asd.template
+++ b/modules/basis/story-module-foo.asd.template
@@ -10,5 +10,6 @@
   :serial t
   :depends-on ("story-modules"DEPENDENCIES)
   :components ((:static-file "story-module-FOO.asd")
+               (:file "FOO")
                (:file "demo-FOO")))
-               (:file "FOO")))
+
