--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,31 @@
 {
-    "name": "hackathon",
-    "homepage": "https://github.com/Blue-Sky-Skunkworks/hackathon.git",
-    "description": "Story static website generator.",
-    "main": "",
-    "moduleType": [],
-    "authors": [
-        "William Halliburton"
-    ],
-    "license": "MIT",
-    "private": true,
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "packery": null,
-        "vis": null,
-        "page": null,
-        "photoswipe": null
-    }
+  "name": "hackathon",
+  "homepage": "https://github.com/Blue-Sky-Skunkworks/hackathon.git",
+  "description": "Story static website generator.",
+  "main": "",
+  "moduleType": [],
+  "authors": [
+    "William Halliburton"
+  ],
+  "license": "MIT",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "packery": null,
+    "vis": null,
+    "page": null,
+    "photoswipe": null,
+    "echojs": null,
+    "iron-elements": null,
+    "paper-elements": null,
+    "neon-elements": null,
+    "google-map": null,
+    "suncalc": null
+  }
 }
